# sf-events

./: .gitignore  19hz_events_2025-08-29_22-00-31.html  19hz_events_2025-08-29_22-04-19.html  19hz_events_latest.json  CLAUDE.md  README.md  build.sh  create_initial_db.py  events-2025-08-29T19-48-28.json  events.db  events_all_geocoded.json  events_friday_geocoded.json  events_organized.json  events_saturday_geocoded.json  events_tba.json  fetch_19hz.py  geocode_all_events.py  geocode_cache.json  geocode_venues.py  index.html  index_v2.html  migrate_to_db.py  models.py  organize_by_date.py  parse_19hz.py  pyproject.toml  render.yaml  requirements.txt  resolve_tba_venues.py  run_scraper.py  scraper_service.py  server.py  server_db.py  split_events_by_day.py  start.py  start.sh  tba_resolutions_20250830_090713.json  tba_resolutions_20250830_090736.json  test_logfire.py  update_tba_map.html
events_by_date/: events_2025-08-29.json  events_2025-08-30.json  events_2025-08-31.json  events_2025-09-01.json  events_2025-09-03.json  events_2025-09-04.json  events_2025-09-05.json  events_2025-09-06.json  events_2025-09-07.json  events_2025-09-09.json  events_2025-09-10.json  events_2025-09-11.json  events_2025-09-12.json  events_2025-09-13.json  events_2025-09-17.json  events_2025-09-18.json  events_2025-09-19.json  events_2025-09-20.json  events_2025-09-21.json  events_2025-09-22.json  events_2025-09-25.json  events_2025-09-26.json  events_2025-09-27.json  events_2025-09-28.json  events_2025-10-02.json  events_2025-10-03.json  events_2025-10-04.json  events_2025-10-09.json  (+39 more)
(+72 files in other folders)
